- updated: cluster supports `auto` mode
- updated: cluster supports watcher in `debug` mode
- updated: `*.filefs()`, `*.filenosql()`, `*.imagefs()`, `*.imagenosql()` by adding `checkmeta` argument
- updated: `$.done([user_instance])` method in `AUTH()`, added a new argument called `user_instance` (optional)

- fixed: `ON('error404')` when the route doens't exist
- fixed: `filter` in Schema `workflows`, `transformations` and `operations`
- fixed: `NOSQL()` joins with absolute paths
- fixed: `TABLE()` joins with absolute paths
- fixed: `(random)` subtype in `config` files
- fixed: `(response)` phrase in `ROUTE()` for multiple `OPERATIONS`
- fixed: a response in `ROUTE()` with mulitple operations if the result contained some error
- fixed: a security bug with a path traversal vulnerability
- fixed: `debug` watcher for `themes`
- fixed: `generators` in schemas with a new declaration
- fixed: a problem with handling files in 404 action
- fixed: `startup` directory in bundles
- fixed: `schema.inherit()` didn't copy `required` fields.

- improved: `LOGMAIL()` mail format
- improved: starting logs in console output (added IPv4 local address)

======= 3.3.2

- fixed: default time zone (`utc` is default time zone)

======= 3.3.1

- added: `RESTBuilder.callback()` which performs `.exec()` automatically
- added: `FLOWSTREAM()`

- fixed: `AUDIT()` method
- fixed: error handling in `controller.invalid()`
- fixed: `req.authorize()`
- fixed: CSS auto-vendor-prefixes, fixed `opacity` with `!important`
- fixed: `CONVERT()` a problem with arrays

======= 3.3.0

- added: `NEWTASK(name, declaration)` for creating preddefined `TaskBuilder`
- added: `TASK(name, taskname, callback, [controller/SchemaOptions/OperationOptions/ErrorBuilder])` for executing preddefined `TaskBuilder`
- added: a new config key `directory_tasks` for `TaskBuilder`
- added: a global alias `MODIFY()` for `F.modify()`
- added: a global alias `VIEWCOMPILE()` for `F.view_compile()`