@@ -47,6 +47,7 @@
 - updated: cluster supports watcher in `debug` mode
 - updated: `*.filefs()`, `*.filenosql()`, `*.imagefs()`, `*.imagenosql()` by adding `checkmeta` argument
 - updated: `$.done([user_instance])` method in `AUTH()`, added a new argument called `user_instance` (optional)
+- updated: GZIP is enabled only for JSON bodies which have more than 1024 bytes
 
 - fixed: `ON('error404')` when the route doens't exist
 - fixed: `filter` in Schema `workflows`, `transformations` and `operations`
@@ -64,6 +65,7 @@
 
 - improved: `LOGMAIL()` mail format
 - improved: starting logs in console output (added IPv4 local address)
+- improved: performance with JSON serialization in `controller.success()` and `controller.done()`
 
 ======= 3.3.2
 
